@@ -19,7 +19,7 @@ package org.nustaq.offheap.bytez.malloc;
 import java.io.RandomAccessFile;
 
 import java.io.File;
-import java.lang.foreign.SegmentScope;
+import java.lang.foreign.Arena;
 import java.nio.channels.FileChannel;
 
 /**
@@ -28,7 +28,7 @@ import java.nio.channels.FileChannel;
  */
 public class MMFBytez extends MemoryBytez {
     private File file;
-    private SegmentScope scope;
+    private Arena scope;
 
     public MMFBytez(String filePath, long length, boolean clearFile) throws Exception {
         init(filePath, length, clearFile);
@@ -44,7 +44,7 @@ public class MMFBytez extends MemoryBytez {
             f.createNewFile();
         }
 
-        scope = SegmentScope.auto();
+        scope = Arena.ofAuto();
         memseg = new RandomAccessFile(f, "rw").getChannel().map(FileChannel.MapMode.READ_WRITE, 0, length, scope);
 ///        memseg = MemorySegment.mapFile(f.toPath(), 0, length, FileChannel.MapMode.READ_WRITE, scope);
         this.file = f;
